# Project-Caviar

./: .gitignore  main.py  pyproject.toml
src/: analyzer.py  draft.py  parser.py  phishsense.py  settings.py
src/Artifacts/: __init__.py  file_artifact.py  headers_artifact.py  html_artifact.py  plain_text.py
src/abstract/: artifact_base.py  singleton.py
src/artifacts/: __init__.py  body.py  file_artifact.py  headers_artifact.py  html_artifact.py  plain_text.py
